@@ -1,3 +1,13 @@
+Fri Sep 16 07:55:50 UTC 2011  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/Faults/run_test.pl:
+        * tests/Faults/run_test_pp.pl:
+        * tests/MT_NoUpcall_Client_Leader/run_test.pl:
+        * tests/POA/EndpointPolicy/run_test_dh.pl:
+          Copy only those configuration files that are needed by the targets.
+          We don't want to solve this in the test framework; the script knows
+          which configuration files should be copied.
+
 Fri Sep 16 07:37:12 UTC 2011  Marcel Smit  <msmit@remedy.nl>
 
         * tests/Connect_Strategy_Test/run_test.pl:
